# ChangeLog for media-video/canola
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  21 Jul 2009; evadim <evadim@evadim.ru> canola-9999.ebuild:
  so, it install now... but how it's work?

*canola-9999 (20 Jul 2009)

  20 Jul 2009; evadim <evadim@evadim.ru> +canola-9999.ebuild, +metadata.xml:
  initial import, only dfaft: deps+skel
