@@ -1,3 +1,3 @@
-EBUILD canola-9999.ebuild 1523 RMD160 44e7575f65be6edddbf63d89f49c101a3bacdd52 SHA1 c252d0273b8f0e916febc8e89c01f7d66e50c3ac SHA256 d7c210aad0ee3e8bf9c1325cb8c664b872443bf0e7b3d8ef5c77753a8c7b3cf2
-MISC ChangeLog 370 RMD160 3d1eb7a4aaab0873c57b44be7d7f222dee33ad84 SHA1 d6c1b0c065ec0c5e19622d41a14816ad378ad21c SHA256 c57f4d2fac9536a355e567f7b55def46d2a5932254c6690ad5da3883c1562a2e
+EBUILD canola-9999.ebuild 2020 RMD160 27937e47b8fde8d746c8305cac3f7fb36f68f40f SHA1 da347d14f5c5c47635b64cd6bb3081c4f6f789ae SHA256 8934c0619c812f74ee25e209e6d35f58cc9afdf8ba0bf8ebe557630e317a2e5f
+MISC ChangeLog 536 RMD160 6c2dbed53f57040ba336293b76d1c817cca24f6a SHA1 9ad334b14ae5c4f6f22ebfc06118a0481c0d3fee SHA256 87a6b1b6316d31796c242563896e1af6bb4a99490ae89906b1f215a0cf1e0691
 MISC metadata.xml 228 RMD160 1890a2965ed780e661e20adcfc4f4cce5f7ca8e9 SHA1 777d2a3ad7f7075c7e75fa5055f3941440e4e875 SHA256 42ea435327140212f3beb05aafebad5053cbad84532f9bb78987de8540c6459a
