@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  16 Sep 2009; Andrian Nord <NightNord@niifaq.ru> canola-9999.ebuild:
+  Added hack-around to generate plugins database and swap Maemo/Linux
+  plug-ins
+  as default.
+
   21 Jul 2009; evadim <evadim@evadim.ru> canola-9999.ebuild:
   so, it install now... but how it's work?
 
